--- a/index.html
+++ b/index.html
@@ -1289,7 +1289,7 @@ Basic annual salary for this position is from 59,440.59 Euro to 69,276.99 Euro, 
 </span>
     </div>
     <div class="hero--title">
-      <p>Our Authorised Consultant to Manage Recruitment is :  Asia Pacific HR Consultants<br>Contact: 9053315072 , 7404344523 , 8053015072 (Language of Communication is either Hindi or English)</p>  
+      <p>Our Authorised Consultant to Manage Recruitment is :  <br>Asia Pacific HR Consultants<br>Contact: 9053315072 , 7404344523 , 8053015072 (Language of Communication is either Hindi or English)</p>  
     </div>
           <div class="hero--paragraph">
               </div>
