--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="field field--name-field-cgroup-icon field--type-entity-reference field--label-hidden field--item"><div>
 
 
-            <div class="field field--name-field-cgroupicon-image field--type-svg-image-field field--label-hidden field--item">  <img width="100" height="100" alt="Vacancies" title="Vacancies" src="https://www.unicef.org/careers/sites/unicef.org.careers/files/content_group/icons/Vacancies.svg">
+            <div class="field field--name-field-cgroupicon-image field--type-svg-image-field field--label-hidden field--item">  
 </div>
 
 </div>
@@ -188,11 +188,9 @@
 </div>
 </span>
     </div>
-    <div class="hero--title">
-      <h1>Vacancies</h1>
-    </div>
+    
           <div class="hero--paragraph">
-        <h3>We are seeking following vacancies in NFTC</h3>
+        <h3>National Federation of Tourism and Transport Cooperative of India Limited (NFTC) is looking for recruitment post all over India.<br>Our authorised recritment HNC for managiing or recritment process is Asia Pacific HR Consultants.<br>Contact: 9053315072 , 7404344523 , 8053015072        </h3>
       </div>
           </div>
 </div>
