--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     </div>
     
           <div class="hero--paragraph">
-        <h3>National Federation of Tourism and Transport Cooperative of India Limited (NFTC) is looking for recruitment post all over India.<br>Our authorised recritment HNC for managiing or recritment process is Asia Pacific HR Consultants.<br>Contact: 9053315072 , 7404344523 , 8053015072        </h3>
+        <h3>National Federation of Tourism and Transport Cooperative of India Limited (NFTC) is looking for recruitment post all over India.<br><br>Our authorised recritment HNC for managiing or recritment process is Asia Pacific HR Consultants.<br>Contact: 9053315072 , 7404344523 , 8053015072        </h3>
       </div>
           </div>
 </div>
